--- a/Tarea integración/TAREA__INTEGRACION_KD.ipynb
+++ b/Tarea integración/TAREA__INTEGRACION_KD.ipynb
@@ -482,7 +482,7 @@
       "source": [
         "# PUNTO 17\n",
         "def f(x):\n",
-        "    return (x**3) / (np.exp(x) - 1)\n",
+        "    return (x**3) / (np.exp(x) - 1)*(np.exp(-x))\n",
         "\n",
         "n = 3\n",
         "\n",
@@ -493,6 +493,20 @@
         "\n",
         "I_exacta = (np.pi**4) / 15\n",
         "\n",
+        "n_values = range(2, 11)",
+        "errors = []",
+        "for n in n_values:",
+        "    x_gauss, w_gauss = np.polynomial.laguerre.laggauss(n)",
+        "    integral_estimada = np.sum(w_gauss * f(x_gauss))",
+        "    error_relativo = abs(integral_estimada - I_exacta) / I_exacta",
+        "    errors.append(error_relativo)",
+        "plt.plot(n_values, errors, marker='o')",
+        "plt.yscale('log')  # Escala logarítmica para mejor visualización",
+        "plt.xlabel('Número de puntos de evaluación (n)')",
+        "plt.ylabel('Error relativo')",
+        "plt.title('Error relativo en la integración de Gauss-Laguerre')",
+        "plt.grid()",
+        "plt.show()",
         "\n",
         "print(f\"Integral estimada (n = {n}): {integral_estimada}\")\n",
         "print(f\"Valor exacto de la integral: {I_exacta}\")\n",
